--- a/ClassCEO/web-app/css/style-desktop.css
+++ b/ClassCEO/web-app/css/style-desktop.css
@@ -65,7 +65,7 @@
 	#header
 	{
 		position: relative;
-		padding: 3em 0 3em 0;
+		padding: 1em 0 3em 0;
 	}
 
 		#header h1
@@ -86,7 +86,8 @@
 		#header span
 		{
 			font-weight: 200;
-			color: #727272;
+			/*color: #727272;*/
+			color: #D93D00;
 		}
 			
 
